# task-sharding

./: .coveragerc  .gitignore  Dockerfile  README.md  README2.md  chat.proto  client.go  docker-compose.yaml  go.mod  go.sum  pylintrc  requirements.txt  server.go  start-clients.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docker-image.yml  pylint.yml
client/: client.go  client.py  connection.py  main.py  setup.cfg  task.py
client/src/: arg_parse.py  client.py  connection.py  repo_state_parser.py  schema_loader.py
client/src/task/: abstract_task.py  bazel_task.py  sleep_task.py  task_factory.py
client/src/task_sharding_client/: arg_parse.py  client.py  connection.py  logger.py  message_type.py  patchset_complexity.py  repo_state_parser.py  task_runner.py
client/src/task_sharding_client/task/: bazel_task.py  default_task.py  sleep_task.py
client/task/: abstract_task.py  sleep_task.py
client/test/: test_client.py
client/test/data/: test_schema.yaml
docs/diagrams/: 1_Linear_Example.drawio  1_Overview.drawio  1_Parallel_Example.drawio  2_Task_Director.drawio
examples/: README.md
examples/bazel/: BUILD  bazel_task.py  gen.bzl  main.py  run-example.sh  schema.yaml
examples/sleep/: main.py  run-example.sh  run-sleep-example.sh  schema.yaml  sleep_task.py
proto/: chat.pb.go  chat.proto  chat_grpc.pb.go
server/: Dockerfile  docker-compose.yaml  go.mod  main.go  requirements.txt  server.go
server/game/: consumers.py  routing.py
server/nginx/: nginx.conf
(+51 files in other folders)
