[metadata]
name = task-sharding-client-alexander-scott
version = 0.0.1
author = Alexander Scott
author_email = alexanderscott@outlook.com
description = The client that can be used for task sharding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alexander-Scott/task-sharding
project_urls =
    Bug Tracker = https://github.com/Alexander-Scott/task-sharding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
